k8s/base/virtual-worker/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: virtual-worker
spec:
  podSelector:
    matchLabels:
      app: virtual-worker
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app: makeline-service
      ports:
        - port: 3001
          protocol: TCP
